--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,9 @@
                 android:id="@+id/imie"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Wpisz imie" />
+                android:hint="@string/editTextImie"
+                android:inputType="text"
+                android:importantForAutofill="no" />
 
         </LinearLayout>
 
@@ -47,8 +49,9 @@
                 android:id="@+id/nazwisko"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Wpisz nazwisko"
-                 />
+                android:hint="@string/editTextNazwisko"
+                android:inputType="text"
+                android:importantForAutofill="no" />
         </LinearLayout>
 
         <LinearLayout
@@ -65,11 +68,12 @@
 
             <EditText
                 android:id="@+id/ocena"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:inputType="number"
-                android:hint="Wpisz ocene(5-15)" />
+                android:hint="@string/editTextOceny"
+                android:importantForAutofill="no" />
 
         </LinearLayout>
 
@@ -77,7 +81,7 @@
             android:id="@+id/oceny_b"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Oceny"
+            android:text="@string/ocenyButton"
             android:visibility="invisible" />
 
         <TextView
